--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -14,7 +14,7 @@ jobs:
             - name: Build docker image
               run: docker build -t sockerio/backend_server .
             - name: publish image to docker hub
-              run: docker push sockerio/backend_server:lastest 
+              run: docker push sockerio/backend_server:latest 
     # deploy:
     #     needs: build
     #     runs-on: []
