--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -12,9 +12,9 @@ jobs:
             - name: Login to docker hub
               run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             - name: Build docker image
-              run: docker build -t sockerio/backend_server .
+              run: docker build -t sivakrishna1023/backend_server .
             - name: publish image to docker hub
-              run: docker push sockerio/backend_server:latest 
+              run: docker push sivakrishna1023/backend_server:latest 
     # deploy:
     #     needs: build
     #     runs-on: []
