cd pipeline added

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
 MONGO_URI=mongodb+srv://sivakrishna:qb4GwFPjiNNJTZ04@cluster0.7fc7lzg.mongodb.net/sockets
+# MONGO_URI =mongodb+srv://sai:sainath@cluster0.4kuucjm.mongodb.net/sockets
 JWT_SECRET=lhjvjvhgvhgl
