--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -15,14 +15,14 @@ jobs:
               run: docker build -t sivakrishna1096/backend_server .
             - name: publish image to docker hub
               run: docker push sivakrishna1096/backend_server:latest 
-    # deploy: 
-    #     needs: build
-    #     runs-on: []
-    #     steps:
-    #         - name: pull Image form docker hub
-    #           run: docker pull sivakrishna1096/backend_server:latest
-    #         - name: Delete old container
-    #           run: docker rm -f backend_server-container
-    #         - name: Run docker container
-    #           run: docker run -d -p 3000:3000 --name backend_server-container sivakrishna1096/backend_server
+    deploy: 
+        needs: build
+        runs-on: [self-hosted]
+        steps:
+            - name: pull Image form docker hub
+              run: docker pull sivakrishna1096/backend_server:latest
+            - name: Delete old container
+              run: docker rm -f backend_server-container
+            - name: Run docker container
+              run: docker run -d -p 3000:3000 --name backend_server-container sivakrishna1096/backend_server
 
